Upload file method added

--- a/AudioEditor/AudioEditor/appsettings.json
+++ b/AudioEditor/AudioEditor/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=EDIZONFIRE\\SQLEXPRESS;Initial Catalog=Blogs;Integrated Security=True;Encrypted=False"
+  },
+  "Storage": {
+    "ConnectionString": "",
+    "ContainerName": "files"
   }
 }
