App name update

--- a/AudioShare/AudioShare/Properties/launchSettings.json
+++ b/AudioShare/AudioShare/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Audio_Editor": {
+    "AudioShare": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
